# funds_algum

./: README.md  README_FUND.md  crossval_selection__stats.py  crossval_selection__statz.py  final.py  pyproject.toml
W/architecture_search/: info.txt  reported_narrow.xlsx  reported_wide.xlsx
W/feature_selection_search/: final.xlsx
data/: gentry.xlsx  gentry_cutdate.xlsx  names.xlsx  naw_cutdate.xlsx  raw_cutdate.xlsx  series_15th.xlsx  series_1st.xlsx  series_2nd.xlsx  stats.xlsx  statz.xlsx  statzF.xlsx
data/gentry/: CBCONSCONF.xlsx  CCSA.csv  CPIAUCSL.csv  DGS10.csv  DXY.csv  GDAXI.csv  IRLTLT01DEM156N.csv  KCFSI.csv  MPMI.xlsx  NPMI.xlsx  PAYEMS.csv  T5YIEM.csv  UNRATE.csv  USDCNY.csv  VIX.csv  VIXM.xlsx  WTISPLC.csv
data/naw/: A229RX0.csv  AAA.csv  AWHMAN.csv  BAA.csv  BOPGSTB.csv  CE16OV.csv  CES3000000008.csv  CPF1M.csv  CPF3M.csv  CPIAUCSL.csv  DTBSPCKFM.csv  EMRATIO.csv  EMVFINCRISES.csv  EMVMACRORE.csv  FEDFUNDS.csv  GEPUPPP.csv  GS1.csv  GS10.csv  GS1M.csv  GS2.csv  GS20.csv  GS3.csv  GS3M.csv  INTDSRBRM193N.csv  INTDSRCNM193N.csv  INTDSRINM193N.csv  INTDSRJPM193N.csv  INTDSRTRM193N.csv  INTDSRUSM193N.csv  JTU5300QUL.csv  KCFSI.csv  MANEMP.csv  MICH.csv  PAYEMS.csv  PCEC96.csv  PCUOMFGOMFG.csv  PMSAVE.csv  PSAVERT.csv  RECPROUSM156N.csv  SPASTT01AUM657N.csv  (+18 more)
data/raw/: AAA.xls  BAA.xls  CES1021210001.xls  CHNPRENEL01MLM.xls  CIVPART.xls  CPIAUCSL.xls  CPIENGSL.xls  GASDESM.xls  INDPRO.xls  IRLTLT01USM156N.xls  MCOILBRENTEU.xls  MHHNGSP.xls  MPROPANEMBTX.xls  PCEC96__unused.xls  PCOALAUUSDM.xls  PNRGINDEXM.xls  (+6 more)
data_util/: load_data.py  load_draft.py
(+29 files in other folders)
