[tool.poetry]
name = "funds_algum"
version = "0.0.1"
description = "Long-only US bivariate portfolio strategy"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "funds_algum"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"